Implement playlist plugin with YouTube API mocked
